--- a/LoginSystem/Templates/Loginify/login.html
+++ b/LoginSystem/Templates/Loginify/login.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{% static 'Loginify/index.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'Loginify/login.css' %}">
         <title>Homepage</title>
     </head>
     <body>
